# C-PP-ITMO

./: README.md
C/hm1/: CMakeLists.txt  main.c
C/lab1/: CMakeLists.txt  main.c
C/lab2/: BufferSamples.c  BufferSamples.h  CMakeLists.txt  CrossCorrelation.c  CrossCorrelation.h  Decode.c  Decode.h  README.md  main.c
CPP/Lab3/: Block.hpp  CMakeLists.txt  bucket_storage.hpp  main.cpp
CPP/Lab4_6SaveTranslation/: Cell.cpp  Cell.h  Explanation.cpp  Explanation.h  Game.cpp  Game.h  Lab4_6SaveTranslation.pro  Lab4_6SaveTranslation_en_US.qm  Lab4_6SaveTranslation_en_US.ts  Lab4_6SaveTranslation_ru_RU.qm  Lab4_6SaveTranslation_ru_RU.ts  Settingsmenu.cpp  Settingsmenu.h  languages.qrc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
CPP/hm2/: CMakeLists.txt  quat.hpp
